# cuhk-ctf-2025-challenges

./: README.md
cloud/41_infinity-token/: .gitignore  41_flag.txt  README.md  bootstrap_infinity_token.sh
cloud/42_iam-mr-cow-or-mr-cloud/: .gitignore  42_flag.txt  README.md
crypto/26_more-dialogue-with-crypto/: 26_flag.txt  README.md
crypto/34_homewards-encryptions/: 34_flag.txt  README.md
crypto/40_favourite-message/: README.md
crypto/55_two-easy/: 55_flag.txt  README.md
crypto/57_secret-base/: README.md
crypto/58_secret-base-mkii/: README.md
pwn/20_ezcpp/: README.md  (+1 more)
web/27_jain-streak-dreamers/public/: .dockerignore  .ocamlformat  Dockerfile  app.opam  docker-compose.yaml  dune-project  init.sql
web/27_jain-streak-dreamers/public/secret/: flag2.txt
web/27_jain-streak-dreamers/public/server/: app.ml  dune
web/27_jain-streak-dreamers/public/server/api/: dune  echo.ml  home.ml  thing.ml  uploads.ml  user.ml
web/27_jain-streak-dreamers/public/server/doc/: dune  error_doc.ml  home_doc.ml  thing_create_doc.ml  upload_read_doc.ml  user_create_doc.ml
web/27_jain-streak-dreamers/public/server/models/: dune  echo.ml  thing.ml  thing.mli  user.ml  user.mli
web/27_jain-streak-dreamers/public/server/templates/: base.eml.html  dune  gallery.eml.html  home.eml.html  login.eml.html  register.eml.html
web/27_jain-streak-dreamers/public/server/utils/: authorize.ml  dune  error.ml  hasher.ml  json.ml
web/27_jain-streak-dreamers/public/server/views/: dune  gallery.ml  home.ml  login.ml  register.ml
web/27_jain-streak-dreamers/public/uploads/1/: flag1.txt
(+356 files in other folders)
